--- a/burried_single_crank_page-2.html
+++ b/burried_single_crank_page-2.html
@@ -8,7 +8,7 @@
 
 
 <div id="container">
-<img id="drawing" src="DRAWING/DRAWING-1.jpg" alt="Drawing Image">
+  <img id="drawing" src="DRAWING/DRAWING-1.jpg">
 <p>POST BURRIED+SINGLE CRANK+GROUNTING PANEL</p>
 
   <label id="result1"></label>
