--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 </head>
 <body>
   <div class="container">
-    <img id="LMELOGO" src="DRAWING/LMELOGO.jpg" alt="LMELOGO">
+    <img id="LMELOGO" src="DRAWING/LMELOGO.jpg">
       <h1>LINK MIDDLE EAST</h1>  
     <h2>Estimation & Drawing System</h2>
     <div class="button-group">
