--- a/burried_single_crank_page-1.html
+++ b/burried_single_crank_page-1.html
@@ -17,7 +17,7 @@
 <body>
         <a href="index.html">⬅ Back to Home</a>
     <div class="container">
-            <img id="LMELOGO" src="DRAWING/LMELOGO.jpg" alt="LMELOGO">
+<img id="LMELOGO" src="DRAWING/LMELOGO.jpg">
         <header>
             <h1>Link middle East</h1>
             <p class="subtitle">(Estimation & Preliminary Drawing)</p>
