--- a/burried_single_crank_page-1.html
+++ b/burried_single_crank_page-1.html
@@ -258,18 +258,7 @@
             <option value="7">7</option>
             <option value="8">8</option>
         </select><br><br>
-        <label for="crossspacing1">Cross spacing for Main Panel (mm):</label>
-        <select id="crossspacing1" name="crossspacing1">
-            <option value="50">50</option>
-            <option value="12.5">12.5</option>
-            <option value="25">25</option>
-            <option value="50">50</option>
-            <option value="75">75</option>
-            <option value="100">100</option>
-            <option value="150">150</option>
-            <option value="200">200</option>
-        </select><br><br>
-        <label for="linespacing1">Line spacing for Main Panel (mm):</label>
+        <label for="linespacing1">Horizontal wire mesh (mm):</label>
         <select id="linespacing1" name="linespacing1">
             <option value="50">50</option>
             <option value="12.5">12.5</option>
@@ -279,6 +268,18 @@
             <option value="100">100</option>
             <option value="150">150</option>
             <option value="200">200</option>
+            </select><br><br>
+        <label for="crossspacing1">Vertical wire mesh (mm):</label>
+        <select id="crossspacing1" name="crossspacing1">
+            <option value="50">50</option>
+            <option value="12.5">12.5</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="75">75</option>
+            <option value="100">100</option>
+            <option value="150">150</option>
+            <option value="200">200</option>
+        </select>
             </select><br><br>
             <label for="crimps1">Crimps for Main Panel (mm):</label>
         <select id="crimps1" name="crimps1">
@@ -304,18 +305,7 @@
             <option value="7">7</option>
             <option value="8">8</option>
         </select><br><br>
-        <label for="crossspacing2">Cross spacing for Outrigger Panel (mm):</label>
-        <select id="crossspacing2" name="crossspacing2">
-            <option value="50">50</option>
-            <option value="12.5">12.5</option>
-            <option value="25">25</option>
-            <option value="50">50</option>
-            <option value="75">75</option>
-            <option value="100">100</option>
-            <option value="150">150</option>
-            <option value="200">200</option>
-        </select><br><br>
-        <label for="linespacing2">Line spacing for Outrigger Panel (mm):</label>
+        <label for="linespacing2">Horizontal wire mesh (mm):</label>
         <select id="linespacing2" name="linespacing2">
             <option value="50">50</option>
             <option value="12.5">12.5</option>
@@ -325,6 +315,18 @@
             <option value="100">100</option>
             <option value="150">150</option>
             <option value="200">200</option>
+        </select><br><br>
+        <label for="crossspacing2">Vertical wire mesh (mm):</label>
+        <select id="crossspacing2" name="crossspacing2">
+            <option value="50">50</option>
+            <option value="12.5">12.5</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="75">75</option>
+            <option value="100">100</option>
+            <option value="150">150</option>
+            <option value="200">200</option>
+        </select>
             </select><br><br>
             <label for="crimps2">Crimps for Outrigger Panel (mm):</label>
         <select id="crimps2" name="crimps2">
@@ -365,19 +367,7 @@
             <option value="7">7</option>
             <option value="8">8</option>
         </select><br><br>
-        <label for="crossspacing3">Cross spacing for Grouting Panel (mm):</label>
-        <select id="crossspacing3" name="crossspacing3">
-            <option value="50">50</option>
-            <option value="12.5">12.5</option>
-            <option value="25">25</option>
-            <option value="50">50</option>
-            <option value="75">75</option>
-            <option value="100">100</option>
-            <option value="150">150</option>
-            <option value="200">200</option>
-        </select><br><br>
-
-        <label for="linespacing3">Linespacing for Grouting Panel (mm):</label>
+        <label for="linespacing3">Horizontal wire mesh (mm):</label>
         <select id="linespacing3" name="linespacing3">
             <option value="50">50</option>
             <option value="12.5">12.5</option>
@@ -388,6 +378,17 @@
             <option value="150">150</option>
             <option value="200">200</option>
             </select><br><br>
+        <label for="crossspacing3">Vertical wire mesh (mm):</label>
+        <select id="crossspacing3" name="crossspacing3">
+            <option value="50">50</option>
+            <option value="12.5">12.5</option>
+            <option value="25">25</option>
+            <option value="50">50</option>
+            <option value="75">75</option>
+            <option value="100">100</option>
+            <option value="150">150</option>
+            <option value="200">200</option>
+        </select><br><br>
 </fieldset>
                
       <label for="totallm">Total LM.:</label>
